[package]
name = "qudag-exchange"
version = "0.2.0"
authors = ["QuDAG Exchange Team"]
edition = "2021"
license = "MIT"
description = "QuDAG Exchange: Quantum-resistant token exchange with rUv (Resource Utilization Voucher) system"
documentation = "https://docs.rs/qudag-exchange"
repository = "https://github.com/ruvnet/QuDAG"
keywords = ["qudag", "exchange", "quantum", "tokens", "blockchain"]
categories = ["cryptography", "finance", "web-programming"]

[dependencies]
# Re-export main modules
qudag-exchange-core = { path = "core" }

# Core QuDAG dependencies
qudag-crypto = { path = "../core/crypto" }
qudag-vault-core = { path = "../core/vault" }
qudag-dag = { path = "../core/dag" }

# Standard dependencies  
thiserror = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"