[package]
name = "qudag-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Model Context Protocol (MCP) server for QuDAG - Integrates vault, exchange, and quantum-resistant operations"
documentation = "https://docs.rs/qudag-mcp"
readme = "README.md"
keywords = ["mcp", "server", "protocol", "qudag", "tools"]
categories = ["development-tools", "network-programming"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.3", features = ["derive"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"
rand = "0.8"
qudag-vault-core = { path = "../core/vault" }
qudag-dag = { path = "../core/dag" }
qudag-network = { path = "../core/network" }
qudag-crypto = { path = "../core/crypto" }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2.4"
tungstenite = "0.20"
tokio-tungstenite = "0.20"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
blake3 = "1.4"
hex = "0.4"
zeroize = { version = "1.6", features = ["derive"] }
constant_time_eq = "0.3"
sys-info = "0.9"
gethostname = "0.4"

[dev-dependencies]
proptest.workspace = true
tokio-test = "0.4"
tempfile = "3.8"