[package]
name = "qudag"
version = "1.3.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "QuDAG - Darknet for agent swarms: Ultra-fast quantum-resistant distributed communication platform with DAG architecture, rUv token exchange, .dark domains, onion routing, and ML-DSA/ML-KEM cryptography"
documentation = "https://docs.rs/qudag"
readme = "README.md"
keywords = ["darknet", "agent-swarm", "quantum-resistant", "dag", "distributed"]
categories = ["cryptography", "network-programming"]

[dependencies]
qudag-crypto = { version = "0.4.0", path = "../core/crypto" }
qudag-dag = { version = "0.4.0", path = "../core/dag" }
qudag-network = { version = "0.4.0", path = "../core/network" }
qudag-protocol = { version = "0.4.0", path = "../core/protocol" }
qudag-exchange-core = { version = "0.3.1", path = "../qudag-exchange/core" }

[features]
default = []
optimizations = ["qudag-dag/optimizations"]
rocksdb = ["qudag-protocol/rocksdb"]