[workspace]
# Empty workspace table to make this package standalone

[package]
name = "qudag-vault-core"
version = "0.2.0"
edition = "2021"
authors = ["QuDAG Team <team@qudag.com>", "rUv <ruv@ruv.net>"]
description = "Quantum-resistant password vault library with post-quantum cryptography"
license = "MIT"
repository = "https://github.com/ruvnet/QuDAG"
homepage = "https://github.com/ruvnet/QuDAG/tree/main/core/vault"
documentation = "https://docs.rs/qudag-vault-core"
readme = "README.md"
keywords = ["password-manager", "vault", "cryptography", "post-quantum", "security"]
categories = ["cryptography", "authentication"]
rust-version = "1.75"

[dependencies]
# QuDAG dependencies (optional for integration) - commented out for initial publishing
# qudag-crypto = { path = "../crypto", optional = true }
# qudag-dag = { path = "../dag", optional = true }

# Cryptography
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
blake3 = "1.5"
hex = "0.4"
rand = "0.8"
getrandom = "0.2"
zeroize = { version = "1.8", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Storage
sled = "0.34"  # Alternative to RocksDB for simplicity
bincode = "1.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"
proptest = "1.6"
tokio = { version = "1", features = ["full"] }
mockall = "0.13"

[[bench]]
name = "vault_benchmarks"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "password_generation"
path = "examples/password_generation.rs"

[features]
default = []
# qudag-integration = ["qudag-crypto", "qudag-dag"]  # Disabled for initial publishing
enterprise = ["rbac", "audit-log", "mfa"]
rbac = []
audit-log = []
mfa = []