[package]
name = "daa-prime-coordinator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Governance and coordination layer using DAA for Prime distributed ML"

[dependencies]
daa-prime-core = "0.2.1"
daa-prime-dht = "0.2.1"
daa-prime-trainer = "0.2.1"
daa-ai = { workspace = true }
daa-rules = { workspace = true }
# daa-orchestrator = { workspace = true } # Not yet published
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockall.workspace = true
proptest.workspace = true